# Logic-Tail

./: CMakeLists.txt  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginEntry.cpp  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: DelayEngine.cpp  DelayEngine.h  FilterUtils.cpp  FilterUtils.h  ReverbEngine.cpp  ReverbEngine.h
Source/Utility/: ParameterLayout.cpp  ParameterLayout.h
artifacts/20260228_182919/delay_default/: metrics.json
artifacts/20260228_182919/reverb_default/: metrics.json
artifacts/20260228_182919/reverb_eq_lo_cut/: metrics.json
artifacts/20260228_182919/reverb_freeze/: metrics.json
artifacts/20260228_182919/reverb_max/: metrics.json
artifacts/20260228_182919/reverb_negative_gravity/: metrics.json
artifacts/20260301_180204/: params.txt
artifacts/20260301_180204/delay_default/: metrics.json
artifacts/20260301_180204/delay_max_feedback/: metrics.json
artifacts/20260301_180204/delay_modulation/: metrics.json
artifacts/20260301_180204/delay_pingpong/: metrics.json
artifacts/20260301_180204/delay_pingpong_mod/: metrics.json
artifacts/20260301_180204/delay_temposync/: metrics.json
artifacts/20260301_180204/reverb_eq_hi_cut/: metrics.json
scripts/: run_harness.ps1
tests/cases/: delay_default.json  delay_max_feedback.json  delay_modulation.json  delay_pingpong.json  delay_pingpong_mod.json  delay_temposync.json  reverb_default.json  reverb_eq_hi_cut.json  reverb_eq_lo_cut.json  reverb_freeze.json  reverb_max.json  reverb_negative_gravity.json  routing_series_dr.json  routing_series_rd.json
(+17 files in other folders)
